reduced headline font-size on screen sizes <400px to prevent overflow

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -393,6 +393,16 @@ li {
       font-weight: 100;
       letter-spacing: 1px;
     }
+
+    @media only screen and (max-width: 400px) {
+      h2 {
+        font-size: 35px;
+      }
+
+      h3 {
+        font-size: 22px;
+      }
+    }
   }
 
   h2 {
